--- a/IntroductionToJava/PT/basicsPt/.vscode/launch.json
+++ b/IntroductionToJava/PT/basicsPt/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - PythagoreanTest",
+            "request": "launch",
+            "mainClass": "PythagoreanTest"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - HelloWorld",
             "request": "launch",
             "mainClass": "HelloWorld"
