--- a/JavaBasics/.vscode/launch.json
+++ b/JavaBasics/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - HumanTest",
+            "request": "launch",
+            "mainClass": "HumanTest"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - OneTo255Test",
             "request": "launch",
             "mainClass": "OneTo255Test"
