--- a/codingdojojava/lookify/src/main/resources/application.properties
+++ b/codingdojojava/lookify/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# spring.mvc.view.prefix= /WEB-INF/
-# spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix= /WEB-INF/
+spring.mvc.view.suffix=.jsp
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
